--- a/metadata.yaml
+++ b/metadata.yaml
@@ -56,5 +56,6 @@ subjects:
 - !lcsh 'Andreyev, Leonid, 1871-1919 -- Translations into English'
 - !lcsh 'Clowns -- Drama'
 - !lcc 'PG'
+- GITenberg
 title: 'He Who Gets Slapped: A Play in Four Acts'
 url: http://www.gutenberg.org/ebooks/37961
